--- a/package.yaml
+++ b/package.yaml
@@ -18,15 +18,14 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/tzbot#readme>
 
-dependencies:
-- base >= 4.7 && < 5
-- aeson
-- servant-server
-- wai
-- warp
-
 library:
   source-dirs: src
+  dependencies:
+  - aeson
+  - base >= 4.7 && < 5
+  - servant-server
+  - wai
+  - warp
 
 executables:
   tzbot-exe:
@@ -37,7 +36,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - base
+    - base >= 4.7 && < 5
     - tzbot
 
 tests:
@@ -49,12 +48,25 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - base
-    - tzbot
+    - base >= 4.7 && < 5
     - hspec
     - hspec-wai
     - hspec-wai-json
-    - aeson
+    - tzbot
+
+ghc-options:
+  - -Weverything
+  - -Wno-implicit-prelude
+  - -Wno-name-shadowing
+  - -Wno-missing-import-lists
+  - -Wno-missing-export-lists
+  - -Wno-unsafe
+  - -Wno-safe
+  - -Wno-missing-safe-haskell-mode
+  - -Wno-prepositive-qualified-module
+  - -Wno-monomorphism-restriction
+  - -Wno-missed-specialisations
+  - -Wno-all-missed-specialisations
 
 default-extensions:
   - AllowAmbiguousTypes
