--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -79,6 +79,7 @@ library
       UndecidableInstances
       UndecidableSuperClasses
       ViewPatterns
+  ghc-options: -Weverything -Wno-implicit-prelude -Wno-name-shadowing -Wno-missing-import-lists -Wno-missing-export-lists -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -143,14 +144,10 @@ executable tzbot-exe
       UndecidableInstances
       UndecidableSuperClasses
       ViewPatterns
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Weverything -Wno-implicit-prelude -Wno-name-shadowing -Wno-missing-import-lists -Wno-missing-export-lists -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base
-    , servant-server
+      base >=4.7 && <5
     , tzbot
-    , wai
-    , warp
   default-language: Haskell2010
 
 test-suite tzbot-test
@@ -210,15 +207,11 @@ test-suite tzbot-test
       UndecidableInstances
       UndecidableSuperClasses
       ViewPatterns
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Weverything -Wno-implicit-prelude -Wno-name-shadowing -Wno-missing-import-lists -Wno-missing-export-lists -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base
+      base >=4.7 && <5
     , hspec
     , hspec-wai
     , hspec-wai-json
-    , servant-server
     , tzbot
-    , wai
-    , warp
   default-language: Haskell2010
