--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,9 @@ library:
   dependencies:
   - aeson
   - base >= 4.7 && < 5
+  - mtl
+  - nyan-interpolation
+  - safe-exceptions
   - servant-auth
   - servant-auth-client
   - servant-client
