--- a/package.yaml
+++ b/package.yaml
@@ -38,8 +38,6 @@ library:
   - text
   - uri-bytestring
   - uri-bytestring-aeson
-  - wai
-  - warp
   - websockets
   - wuss
 
@@ -58,18 +56,16 @@ executables:
 
 tests:
   tzbot-test:
-    main:                Spec.hs
+    main:                Main.hs
     source-dirs:         test
+    build-tools:      tasty-discover:tasty-discover
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - base >= 4.7 && < 5
-    - hspec
-    - hspec-wai
-    - hspec-wai-json
-    - tzbot
+    - tasty
 
 ghc-options:
   - -Weverything
