--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -24,7 +24,6 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
       TzBot.Slack.SocketMode.Client
       TzBot.Slack.WebAPI.API
       TzBot.Slack.WebAPI.Class
@@ -102,8 +101,6 @@ library
     , text
     , uri-bytestring
     , uri-bytestring-aeson
-    , wai
-    , warp
     , websockets
     , wuss
   default-language: Haskell2010
@@ -173,8 +170,9 @@ executable tzbot-exe
 
 test-suite tzbot-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: Main.hs
   other-modules:
+      Tree
       Paths_tzbot
   hs-source-dirs:
       test
@@ -229,10 +227,9 @@ test-suite tzbot-test
       UndecidableSuperClasses
       ViewPatterns
   ghc-options: -Weverything -Wno-implicit-prelude -Wno-name-shadowing -Wno-missing-import-lists -Wno-missing-export-lists -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+      tasty-discover:tasty-discover
   build-depends:
       base >=4.7 && <5
-    , hspec
-    , hspec-wai
-    , hspec-wai-json
-    , tzbot
+    , tasty
   default-language: Haskell2010
