--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ library:
   source-dirs: src
   dependencies:
   - aeson
+  - aeson-casing
   - aeson-pretty
   - base >= 4.7 && < 5
   - http-client
