--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 Serokell <https://serokell.io>
+#
+# SPDX-License-Identifier: MPL-2.0
+
 display_information:
   name: tzbot
 features:
