--- a/package.yaml
+++ b/package.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 Serokell <https://serokell.io>
+#
+# SPDX-License-Identifier: MPL-2.0
+
 name:                tzbot
 version:             0.1.0.0
 github:              "githubuser/tzbot"
