--- a/package.yaml
+++ b/package.yaml
@@ -4,23 +4,17 @@
 
 name:                tzbot
 version:             0.1.0.0
-github:              "githubuser/tzbot"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+github:              serokell/tzbot
+license:             MPL-2.0
+license-file:        LICENSE
+author:              Serokell
+maintainer:          Serokell <hi@serokell.io>
+copyright:           2022 Serokell <https://serokell.io>
 
 extra-source-files:
 - README.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/tzbot#readme>
+description:         Please see the README on GitHub at <https://github.com/serokell/tzbot#readme>
 
 library:
   source-dirs: src
