[#3] Augment websockets loop
Problem: our websockets app doesn't currently handle the incoming
Slack events in any useful way. Additionally, we are trying to
implement the API ourselves, whereas there is an external library
already doing that.

Solution: changed the websockets loop to use the 'slacker' lib,
added extracting useful data from any message events, as well as
some safeguards.

--- a/package.yaml
+++ b/package.yaml
@@ -21,13 +21,11 @@ library:
   dependencies:
   - aeson
   - aeson-casing
-  - aeson-pretty
   - base >= 4.7 && < 5
   - http-client
-  - http-client-tls
   - lens
+  - lens-aeson
   - mtl
-  - network
   - nyan-interpolation
   - safe-exceptions
   - servant-auth
@@ -40,8 +38,6 @@ library:
   - tz
   - uri-bytestring
   - uri-bytestring-aeson
-  - websockets
-  - wuss
 
 executables:
   tzbot-exe:
@@ -53,6 +49,9 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - base >= 4.7 && < 5
+    - http-client
+    - http-client-tls
+    - slacker
     - text
     - tzbot
 
@@ -73,8 +72,8 @@ ghc-options:
   - -Weverything
   - -Wno-implicit-prelude
   - -Wno-name-shadowing
-  - -Wno-missing-import-lists
   - -Wno-missing-export-lists
+  - -Wno-missing-import-lists
   - -Wno-unsafe
   - -Wno-safe
   - -Wno-missing-safe-haskell-mode
