--- a/cabal.project
+++ b/cabal.project
@@ -12,5 +12,22 @@ source-repository-package
     subdir: core
             full
 
+source-repository-package
+    type: git
+    location: https://github.com/jship/context/
+    tag: ac965bdfc47b33c6b5a8c47ae1396752a6b0e2b5
+    subdir: context
+
+source-repository-package
+    type: git
+    location: https://github.com/jship/monad-logger-aeson
+    tag: fa87cb7d829c8edb0aaebd5f84c064942b0b9411
+    subdir: monad-logger-aeson
+
+source-repository-package
+    type: git
+    location: https://github.com/serokell/slacker
+    tag: ce9df4e3bc7383a1c83c3bd507048894cd5bf287
+
 allow-older: *
 allow-newer: *
