--- a/stack.yaml
+++ b/stack.yaml
@@ -13,3 +13,12 @@ extra-deps:
   subdirs:
    - full
    - core
+- git: https://github.com/serokell/slacker
+  commit: ce9df4e3bc7383a1c83c3bd507048894cd5bf287
+- monad-logger-aeson-0.2.0.1@sha256:3ce33913e0f0f73cd272ce734abaae460bdbc48ad9c4d7192a912849060114b0,5156
+- context-0.2.0.0@sha256:6b643adb4a64fe521873d08df0497f71f88e18b9ecff4b68b4eef938e446cfc9,1886
+
+nix:
+  enable: true
+  packages: [ zlib ]
+  pure: false
