[#1] Add time references parser
Problem: we need to be able to find and parse 'TimeReference's from
Slack messages, but 'parseTimeRefs' is not implemented yet.

Solution: implement 'parseTimeRefs' to support a wide (but possibly
not complete) array of time references from the given Text.

--- a/package.yaml
+++ b/package.yaml
@@ -22,9 +22,11 @@ library:
   - aeson
   - aeson-casing
   - base >= 4.7 && < 5
+  - containers
   - http-client
   - lens
   - lens-aeson
+  - megaparsec
   - mtl
   - nyan-interpolation
   - safe-exceptions
