[Chore] Update xrefcheck to v0.2.2

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -33,7 +33,7 @@ steps:
     command: nix-build ci.nix -A haddock
 
   - label: xrefcheck
-    command: nix run -f ci.nix xrefcheck -c xrefcheck --no-progress -m full --ignored dist-newstyle
+    command: nix run -f ci.nix xrefcheck -c xrefcheck
 
   - label: REUSE lint
     command: nix run -f ci.nix pkgs.reuse -c reuse lint
