--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -24,6 +24,7 @@ source-repository head
 
 library
   exposed-modules:
+      TzBot.BotMain
       TzBot.Instances
       TzBot.Parser
       TzBot.ProcessEvent
@@ -93,6 +94,7 @@ library
     , base >=4.7 && <5
     , containers
     , http-client
+    , http-client-tls
     , lens
     , lens-aeson
     , megaparsec
@@ -103,6 +105,7 @@ library
     , servant-auth-client
     , servant-client
     , servant-server
+    , slacker
     , text
     , time
     , time-compat
@@ -170,10 +173,6 @@ executable tzbot-exe
   ghc-options: -Weverything -Wno-implicit-prelude -Wno-name-shadowing -Wno-missing-export-lists -Wno-missing-import-lists -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , http-client
-    , http-client-tls
-    , slacker
-    , text
     , tzbot
   default-language: Haskell2010
 
