Remove WebAPI typeclass, merge some modules
Currently for making a prototype typeclasses are not needed,
here they just make program structure more complicated and
only one instance can exist (for main implementation).
Better return them later for testing (or use Handle pattern).

--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -28,10 +28,9 @@ library
       TzBot.Instances
       TzBot.Parser
       TzBot.ProcessEvent
-      TzBot.Slack.Core.Types
-      TzBot.Slack.WebAPI.API
-      TzBot.Slack.WebAPI.Class
-      TzBot.Slack.WebAPI.Impl
+      TzBot.RunMonad
+      TzBot.Slack
+      TzBot.Slack.API
       TzBot.TimeReference
   other-modules:
       Paths_tzbot
