--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -64,6 +64,7 @@ library
       MultiWayIf
       NamedFieldPuns
       NegativeLiterals
+      NoImplicitPrelude
       NumDecimals
       NumericUnderscores
       OverloadedLabels
@@ -99,7 +100,6 @@ library
     , megaparsec
     , mtl
     , nyan-interpolation
-    , safe-exceptions
     , servant-auth
     , servant-auth-client
     , servant-client
@@ -109,6 +109,7 @@ library
     , time
     , time-compat
     , tz
+    , universum
     , uri-bytestring
     , uri-bytestring-aeson
   default-language: Haskell2010
@@ -147,6 +148,7 @@ executable tzbot-exe
       MultiWayIf
       NamedFieldPuns
       NegativeLiterals
+      NoImplicitPrelude
       NumDecimals
       NumericUnderscores
       OverloadedLabels
@@ -173,6 +175,7 @@ executable tzbot-exe
   build-depends:
       base >=4.7 && <5
     , tzbot
+    , universum
   default-language: Haskell2010
 
 test-suite tzbot-test
@@ -211,6 +214,7 @@ test-suite tzbot-test
       MultiWayIf
       NamedFieldPuns
       NegativeLiterals
+      NoImplicitPrelude
       NumDecimals
       NumericUnderscores
       OverloadedLabels
