--- a/stack.yaml
+++ b/stack.yaml
@@ -7,8 +7,6 @@ resolver: lts-19.23
 packages:
 - .
 
-system-ghc: true
-
 extra-deps:
 - git: https://github.com/serokell/nyan-interpolation.git
   commit: 5e158057b167275d2150454e2bb731cfe686ea7a
@@ -18,10 +16,13 @@ extra-deps:
 - git: https://github.com/velveteer/slacker.git
   commit: bf8e13bbc566f92f900d2cc92ebd8a6f1e46334f
   # nix-sha256: sha256-X/8l6jvudzi46dWyrvOAPxdT4f2nSAISGEzqVNyelKY=
+- git: https://github.com/serokell/tztime.git
+  commit: 79034a1afc072e859df1ef8f58c2a1cdc04c78a3
 
 # Slacker's deps
 - monad-logger-aeson-0.3.1.0@sha256:dbb1f816d00a820982094362551e20582de0a27c337d430fa7080dcacbe66f34,5193
 - context-0.2.0.1@sha256:b5a1390a5ad11b7edd0449c9ef96823f082bff4988bd09583e37a4e93e9aad10,1891
+
 
 nix:
   enable: false
