--- a/cabal.project
+++ b/cabal.project
@@ -14,6 +14,11 @@ source-repository-package
 
 source-repository-package
     type: git
+    location: https://github.com/serokell/tztime.git
+    tag: 79034a1afc072e859df1ef8f58c2a1cdc04c78a3
+
+source-repository-package
+    type: git
     location: https://github.com/velveteer/slacker.git
     tag: bf8e13bbc566f92f900d2cc92ebd8a6f1e46334f
 
