[#7] Cache slack data
Problem: The bot uses two methods, `getUser` and `getChannelMembers`,
which are subjects to Slack's rate limits, and we need to avoid
unneeded calls to those methods.

Solution: Add caching for user info and channel members, handle
member_joined_channel and member_left_channel events by adjusting
cached channel members.

--- a/manifest.yml
+++ b/manifest.yml
@@ -20,6 +20,8 @@ oauth_config:
 settings:
   event_subscriptions:
     bot_events:
+      - member_joined_channel
+      - member_left_channel
       - message.channels
       - message.groups
   interactivity:
