--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,8 @@ library:
   - aeson
   - aeson-casing
   - base >= 4.7 && < 5
+  - cache
+  - clock
   - containers
   - fmt
   - dlist
@@ -31,11 +33,13 @@ library:
   - http-client-tls
   - http-types
   - lifted-async
+  - managed
   - megaparsec
   - monad-control
   - mtl
   - nyan-interpolation
   - o-clock
+  - random
   - servant-auth
   - servant-auth-client
   - servant-client
@@ -50,9 +54,10 @@ library:
   - transformers-base
   - tz
   - tztime
+  - unordered-containers
+  - utf8-string
   - validation
   - yaml
-  - utf8-string
 
 executables:
   tzbot-exe:
