--- a/config/config.yaml
+++ b/config/config.yaml
@@ -33,3 +33,13 @@ cacheUsersInfo: 3m
 # Envvar: SLACK_TZ_CACHE_CONVERSATION_MEMBERS
 #
 cacheConversationMembers: 3m
+
+# Defines what Slack channel will be used for collecting user feedback.
+# Envvar: SLACK_TZ_FEEDBACK_CHANNEL
+#
+# feedbackChannel: C13FQHWLQS2
+
+# Defines what file will be used for collecting user feedback.
+# Envvar: SLACK_TZ_FEEDBACK_FILE
+#
+feedbackFile: feedback.log
