--- a/cabal.project
+++ b/cabal.project
@@ -7,6 +7,11 @@ packages:
 
 source-repository-package
     type: git
+    location: https://github.com/martijnbastiaan/doctest-parallel
+    tag: 112b85b55c63dae1cc52b5216efe03873f1acc06
+
+source-repository-package
+    type: git
     location: https://github.com/serokell/nyan-interpolation.git
     tag: 5e158057b167275d2150454e2bb731cfe686ea7a
     subdir: core
