--- a/package.yaml
+++ b/package.yaml
@@ -92,6 +92,18 @@ tests:
     - tasty-quickcheck
     - time
     - universum
+  doctests:
+    main:                doctests.hs
+    source-dirs:         test
+    other-modules:       []
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - base >= 4.7 && < 5
+    - universum
+    - doctest-parallel
 
 ghc-options:
   - -Weverything
