--- a/package.yaml
+++ b/package.yaml
@@ -23,9 +23,11 @@ library:
   - aeson
   - aeson-casing
   - base >= 4.7 && < 5
+  - bytestring
   - cache
   - clock
   - containers
+  - directory
   - fmt
   - dlist
   - formatting
@@ -40,6 +42,7 @@ library:
   - nyan-interpolation
   - o-clock
   - random
+  - optparse-applicative
   - servant-auth
   - servant-auth-client
   - servant-client
