--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -33,6 +33,7 @@ library
       TzBot.Feedback.Dialog.Types
       TzBot.Feedback.Save
       TzBot.Instances
+      TzBot.Logger
       TzBot.Options
       TzBot.Parser
       TzBot.ProcessEvents
@@ -129,8 +130,11 @@ library
     , http-client
     , http-client-tls
     , http-types
+    , katip
+    , lens
     , lens-aeson
     , lifted-async
+    , lifted-base
     , managed
     , megaparsec
     , monad-control
@@ -361,6 +365,7 @@ test-suite tzbot-test
     , containers
     , hspec
     , http-types
+    , katip
     , nyan-interpolation
     , servant-client-core
     , string-conversions
