--- a/manifest.yml
+++ b/manifest.yml
@@ -30,6 +30,7 @@ oauth_config:
       - im:history
       - mpim:history
       - mpim:read
+      - im:read
 settings:
   event_subscriptions:
     bot_events:
@@ -37,6 +38,7 @@ settings:
       - member_left_channel
       - message.channels
       - message.groups
+      - message.im
   interactivity:
     is_enabled: true
   org_deploy_enabled: false
