--- a/package.yaml
+++ b/package.yaml
@@ -110,6 +110,28 @@ tests:
     - universum
     - doctest-parallel
 
+benchmarks:
+  cache-benchmarks:
+    main:        Main.hs
+    source-dirs: bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - base >= 4.7 && < 5
+    - tzbot
+    - async
+    - containers
+    - criterion
+    - lifted-async
+    - time
+    - o-clock
+    - text
+    - tztime
+    - universum
+    - nyan-interpolation
+
 ghc-options:
   - -Weverything
   - -Wno-implicit-prelude
