[Fix] Fix time reference parser
Problem: The parser is not perfect and can be improved.

Solution: Try to improve the parser; add preceding tokenization, add
case-insensitive days of week, months and timezones, add constraints,
some other fixes.

--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ library:
   - base >= 4.7 && < 5
   - bytestring
   - cache
+  - case-insensitive
   - clock
   - containers
   - directory
@@ -35,6 +36,7 @@ library:
   - fmt
   - formatting
   - guid
+  - glider-nlp
   - http-client
   - http-client-tls
   - http-types
