[#44] Add help command
Problem: Currently, each ephemeral with translations contain button
which functionality doubles existing entrypoint. Because it can be
annoying, we should remove it and instead give a hint to a user how to
call tzbot entrypoints.

Solution: Remove buttons from ephemerals, add command /tzhelp, append
the usage of that command randomly with rather low chance to ephemerals
with translations.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -48,3 +48,9 @@ feedbackFile: feedback.log
 # Envvar: SLACK_TZ_CACHE_REPORT_DIALOG
 #
 cacheReportDialog: 1h
+
+# Inverse chance of appending help command usage hint to the ephemeral
+# message containing time translations.
+# Envvar: SLACK_TZ_INVERSE_HELP_USAGE_CHANCE
+#
+inverseHelpUsageChance: 15
