[#51] Revise exceptions handling
Problem: Currently we use `ExceptT BotException IO` which is
inconvenient because both BotException, other sync exceptions and async
exceptions should be handled separately.

Solution: Remove ExceptT, use UnliftIO for exceptions handling, also use
UnliftIO for asyncs instead of monad-control.

--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -135,12 +135,8 @@ library
     , katip
     , lens
     , lens-aeson
-    , lifted-async
-    , lifted-base
     , managed
     , megaparsec
-    , monad-control
-    , mtl
     , nyan-interpolation
     , o-clock
     , optparse-applicative
@@ -157,10 +153,10 @@ library
     , time
     , time-compat
     , transformers
-    , transformers-base
     , tz
     , tztime
     , universum
+    , unliftio
     , unordered-containers
     , utf8-string
     , validation
