--- a/package.yaml
+++ b/package.yaml
@@ -43,12 +43,8 @@ library:
   - katip
   - lens
   - lens-aeson
-  - lifted-async
-  - lifted-base
   - managed
   - megaparsec
-  - monad-control
-  - mtl
   - nyan-interpolation
   - o-clock
   - random
@@ -65,9 +61,9 @@ library:
   - time
   - time-compat
   - transformers
-  - transformers-base
   - tz
   - tztime
+  - unliftio
   - unordered-containers
   - utf8-string
   - validation
