--- a/package.yaml
+++ b/package.yaml
@@ -137,6 +137,7 @@ ghc-options:
   - -Wno-monomorphism-restriction
   - -Wno-missed-specialisations
   - -Wno-all-missed-specialisations
+  - -Wunused-packages
 
 default-extensions:
   - AllowAmbiguousTypes
