[#70] Warn users on unrecognized timezone abbreviation
Problem: Currently, unrecognized timezone abbreviation is simply ignored
as it would be an unrelated word.

Solution: Consider all-capitalized words with 2-5 characters length as timezone
abbreviations and warn users when they are not known by us; add hints when
encountered abbreviation is similar to some of known ones.

--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -150,6 +150,7 @@ library
     , string-conversions
     , template-haskell
     , text
+    , text-metrics
     , time
     , time-compat
     , transformers
