[#64] Add possibility to run tzbot as server
Problem: only server-like Slack apps can be published in the Slack App
Directory.

Solution: Allow to choose how to run the server, using common handler
functions.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -60,3 +60,14 @@ inverseHelpUsageChance: 15
 # Envvar: SLACK_TZ_LOG_LEVEL
 #
 logLevel: Info
+
+
+# Port on which to run (server mode only).
+# Envvar: SLACK_TZ_PORT
+#
+port: 8912
+
+# Signing key used to verify Slack signatures (server mode only).
+# Envvar: SLACK_TZ_SIGNING_SECRET
+#
+# signingKey: 12345qwerty
